--- a/src/src/scss/styles.scss
+++ b/src/src/scss/styles.scss
@@ -4,6 +4,7 @@
 @import 'widgets/critical';
 @import 'widgets/image';
 @import 'widgets/message';
+@import 'widgets/calendar';
 
 * {
   box-sizing: border-box;
