--- a/src/widgets/widget-image.handlebars
+++ b/src/widgets/widget-image.handlebars
@@ -1,4 +1,4 @@
-<li data-path='{{args.path}}'>
+<li data-path='{{args.path}}' data-name='{{args.name}}'>
 	<header class="remove-widget"></header>
 	<div class="widget-image"><img src="{{args.path}}"></div>
 </li>
