--- a/src/src/scss/widgets/_image.scss
+++ b/src/src/scss/widgets/_image.scss
@@ -5,10 +5,14 @@
 
 	img {
 		width:100%;
+		cursor: pointer;
 	}
 }
 
 .imageTab {
+	.overflow {
+		border:1px solid #000;
+	}
 	button {
 		padding:4px 10px;
 		margin-bottom: 5px;
