--- a/src/src/scss/viewport.scss
+++ b/src/src/scss/viewport.scss
@@ -12,25 +12,29 @@ body {
 }
 
 
-.message h2 {
-	font-weight: 200;
-	font-size:60px;
-	width: 80%;
-	overflow: hidden;
-	padding: 0;
-	margin: 0 0 0 -40%;
-	position: absolute;
-	z-index:100;
-	letter-spacing:4px;
-	top: 42%;
-	left: 50%;
-	text-align: center;
-	opacity: 0;
-	display: inline-block;
-	animation: FadeIn 4s linear 0s forwards;
+.message {  
 
-	div {		
-		animation: FadeOut 4s linear 12s forwards;
+	h2 {
+		font-weight: 200;
+		font-size:60px;
+		width: 80%;
+		overflow: hidden;
+		padding: 0;
+		margin: 0 0 0 -40%;
+		position: absolute;
+		z-index:100;
+		letter-spacing:4px;
+		top: 50%;
+		transform: translateY(-50%);
+		left: 50%;
+		text-align: center;
+		opacity: 0;
+		display: inline-block;
+		animation: FadeIn 4s linear 0s forwards;
+
+		div {		
+			animation: FadeOut 4s linear 12s forwards;
+		}
 	}
 }
 
