--- a/src/src/scss/widgets/_image.scss
+++ b/src/src/scss/widgets/_image.scss
@@ -13,4 +13,14 @@
 	.overflow {
 		border:1px solid #000;
 	}
+
+	.imageCanvas {
+		position:absolute;
+		z-index:1;
+	}
+
+	.fogOfWarCanvas {
+		position:absolute;
+		z-index:10;
+	}
 }
