--- a/src/src/scss/styles.scss
+++ b/src/src/scss/styles.scss
@@ -6,6 +6,8 @@
 @import 'widgets/message';
 @import 'widgets/calendar';
 @import 'widgets/audioplayer';
+@import 'widgets/charts';
+@import 'widgets/handel';
 @import "photon/photon";
 
 * {
