--- a/src/widgets/widget-handel.handlebars
+++ b/src/widgets/widget-handel.handlebars
@@ -1,6 +1,27 @@
-<li>
-  <header class="remove-widget"></header>
-  <div class="widget-handel">
-  	
-  </div>
+<li data-path='{{args.path}}' data-name='{{args.name}}'>
+	<header class="remove-widget"></header>
+	<div class="widget-handel">
+		<input type="text" name="search" placeholder="Suche" class="search">
+		<table>
+			<thead>
+				<tr>
+					<th class="name">Name</th>
+					<th class="gewicht">Gewicht</th>
+					<th class="preis">Preis</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+            		<td colspan="3">
+            		<div class="tbody">
+            		<table>
+            			<tbody>
+            			</tbody>
+            		</table>
+            		</td>
+            		</div>
+            	</tr>
+			</tbody>			
+		</table>
+	</div>
 </li>
