--- a/src/widgets/widget-message.handlebars
+++ b/src/widgets/widget-message.handlebars
@@ -1,6 +1,6 @@
 <li>
 	<header class="remove-widget"></header>
-	<div class="widget-message">
+	<div class="widget-charts">
 		<input placeholder="Message" type="text" name="message"  />
 		<button>Anzeigen</button>
 	</div>
