--- a/src/src/scss/widgets/_image.scss
+++ b/src/src/scss/widgets/_image.scss
@@ -23,4 +23,11 @@
 		position:absolute;
 		z-index:10;
 	}
+
+	#radiusCursor {
+		position:absolute;
+		border-radius:20000px;
+		border:1px solid #000;
+		pointer-events: none;
+	}
 }
